--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>neolink</title>
+    <title>NeoLink - Matrix Edition</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/peerjs/1.3.2/peerjs.min.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;500&display=swap" rel="stylesheet">
     <style>
@@ -27,23 +27,39 @@
 
         #messages {
             height: 300px;
-            border: 2px solid #00FF00;
-            border-radius: 10px;
             overflow-y: scroll;
             margin-bottom: 20px;
             padding: 15px;
-            background-color: #001100;
             color: #00FF00;
-            box-shadow: 0 0 10px #00FF00;
+            /* Matrix-style scrollbar */
+            scrollbar-width: thin;
+            scrollbar-color: #00FF00 #000;
+        }
+
+        #messages::-webkit-scrollbar {
+            width: 12px;
+        }
+
+        #messages::-webkit-scrollbar-track {
+            background: #000;
+        }
+
+        #messages::-webkit-scrollbar-thumb {
+            background: #00FF00;
+            border-radius: 10px;
+        }
+
+        #messages::-webkit-scrollbar-thumb:hover {
+            background: #00CC00;
         }
 
         #messageInput {
-            width: 70%;
+            width: calc(100% - 115px);
             padding: 10px;
-            border: 2px solid #00FF00;
-            border-radius: 8px;
-            margin-right: 5%;
-            background-color: #001100;
+            border: 1px solid #00FF00;
+            border-radius: 5px;
+            margin-right: 10px;
+            background-color: transparent;
             color: #00FF00;
             box-shadow: 0 0 5px #00FF00;
             box-sizing: border-box;
@@ -51,12 +67,11 @@
         }
 
         #sendButton {
-            width: 25%;
             padding: 10px;
             border: none;
             background-color: #003300;
             color: #00FF00;
-            border-radius: 8px;
+            border-radius: 5px;
             cursor: pointer;
             box-shadow: 0 0 5px #00FF00;
         }
@@ -68,21 +83,17 @@
 
         .message {
             margin: 10px 0;
-            padding: 10px;
-            border-radius: 10px;
+            padding: 5px;
             max-width: 60%;
             word-wrap: break-word;
-            box-shadow: 0 0 5px #00FF00;
         }
 
         .message.you {
-            background-color: #002200;
             text-align: right;
             margin-left: auto;
         }
 
         .message.peer {
-            background-color: #001100;
             text-align: left;
             margin-right: auto;
         }
@@ -90,10 +101,10 @@
         input[type="text"] {
             width: calc(100% - 115px);
             padding: 10px;
-            border: 2px solid #00FF00;
-            border-radius: 8px;
+            border: 1px solid #00FF00;
+            border-radius: 5px;
             margin-right: 10px;
-            background-color: #001100;
+            background-color: transparent;
             color: #00FF00;
             box-shadow: 0 0 5px #00FF00;
             box-sizing: border-box;
@@ -105,7 +116,7 @@
             border: none;
             background-color: #003300;
             color: #00FF00;
-            border-radius: 8px;
+            border-radius: 5px;
             cursor: pointer;
             box-shadow: 0 0 5px #00FF00;
         }
@@ -122,13 +133,16 @@
     </style>
 </head>
 <body>
-    <h1>neolink</h1>
+    <h1>NeoLink - Matrix Edition</h1>
     <div id="messages"></div>
     <input type="text" id="messageInput" placeholder="Type a message...">
     <button id="sendButton">Send</button>
     <p>Your ID: <span id="peerId"></span></p>
     <input type="text" id="connectInput" placeholder="Enter peer ID to connect">
     <button id="connectButton">Connect</button>
+
+    <!-- Add sound for receiving messages -->
+    <audio id="receiveSound" src="https://www.soundjay.com/button/beep-07.wav" preload="auto"></audio>
 
     <script>
         const peer = new Peer(generateReadableId());
@@ -152,6 +166,7 @@
         function setupConnection() {
             conn.on('data', (data) => {
                 addMessage(data, 'Peer');
+                playReceiveSound();
             });
         }
 
@@ -183,7 +198,11 @@
             messagesDiv.scrollTop = messagesDiv.scrollHeight;
         }
 
-        // Generate readable IDs using simple word combinations
+        function playReceiveSound() {
+            const sound = document.getElementById('receiveSound');
+            sound.play();
+        }
+
         function generateReadableId() {
             const adjectives = ['quick', 'bright', 'bold', 'silent', 'brave'];
             const nouns = ['fox', 'tiger', 'eagle', 'lion', 'wolf'];
