--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NeoLink - Matrix Edition</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/peerjs/1.3.2/peerjs.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/qrcode/build/qrcode.min.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;500&display=swap" rel="stylesheet">
     <style>
         body {
@@ -31,7 +33,6 @@
             margin-bottom: 20px;
             padding: 15px;
             color: #00FF00;
-            /* Matrix-style scrollbar */
             scrollbar-width: thin;
             scrollbar-color: #00FF00 #000;
         }
@@ -86,6 +87,7 @@
             padding: 5px;
             max-width: 60%;
             word-wrap: break-word;
+            background: transparent;
         }
 
         .message.you {
@@ -130,6 +132,19 @@
             font-weight: bold;
             color: #00FF00;
         }
+
+        #qrCode {
+            margin: 20px 0;
+            text-align: center;
+        }
+
+        #qrCode img {
+            width: 150px;
+            height: 150px;
+            border: 2px solid #00FF00;
+            border-radius: 10px;
+            background-color: #000;
+        }
     </style>
 </head>
 <body>
@@ -138,11 +153,15 @@
     <input type="text" id="messageInput" placeholder="Type a message...">
     <button id="sendButton">Send</button>
     <p>Your ID: <span id="peerId"></span></p>
+    <div id="qrCode">
+        <p>Scan this QR code to connect:</p>
+        <div id="qrCodeContainer"></div>
+    </div>
     <input type="text" id="connectInput" placeholder="Enter peer ID to connect">
     <button id="connectButton">Connect</button>
 
     <!-- Add sound for receiving messages -->
-    <audio id="receiveSound" src="https://www.soundjay.com/button/beep-07.wav" preload="auto"></audio>
+    <audio id="receiveSound" src="https://github.com/the-pythor/neolink/blob/main/glitch-sound-fx-pack-04-118236.mp3" preload="auto"></audio>
 
     <script>
         const peer = new Peer(generateReadableId());
@@ -150,6 +169,7 @@
 
         peer.on('open', (id) => {
             document.getElementById('peerId').textContent = id;
+            generateQRCode(id);
         });
 
         peer.on('connection', (connection) => {
@@ -203,6 +223,13 @@
             sound.play();
         }
 
+        function generateQRCode(id) {
+            QRCode.toDataURL(id, { color: { dark: '#00FF00', light: '#000000' } }, function (err, url) {
+                if (err) throw err;
+                document.getElementById('qrCodeContainer').innerHTML = `<img src="${url}" alt="QR Code">`;
+            });
+        }
+
         function generateReadableId() {
             const adjectives = ['quick', 'bright', 'bold', 'silent', 'brave'];
             const nouns = ['fox', 'tiger', 'eagle', 'lion', 'wolf'];
@@ -210,6 +237,10 @@
             const noun = nouns[Math.floor(Math.random() * nouns.length)];
             return `${adjective}-${noun}-${Math.floor(Math.random() * 1000)}`;
         }
+
+        // Scan QR Code to Connect
+        // Implementing QR code scanning would typically involve a library or API for the scanning functionality.
+        // For simplicity, this example does not include QR code scanning.
     </script>
 </body>
 </html>
