--- a/index.html
+++ b/index.html
@@ -25,6 +25,29 @@
             margin-bottom: 20px;
             font-weight: 500;
             text-shadow: 0 0 10px #00FF00;
+            cursor: pointer;
+            position: relative;
+            display: inline-block;
+        }
+
+        #tooltip {
+            display: none;
+            position: absolute;
+            top: 100%;
+            left: 50%;
+            transform: translateX(-50%);
+            margin-top: 10px;
+            padding: 10px;
+            border: 2px solid #00FF00;
+            border-radius: 10px;
+            background-color: #000;
+            z-index: 10;
+        }
+
+        #tooltip img {
+            width: 150px;
+            height: 150px;
+            cursor: pointer;
         }
 
         #messages {
@@ -132,36 +155,22 @@
             font-weight: bold;
             color: #00FF00;
         }
-
-        #qrCode {
-            margin: 20px 0;
-            text-align: center;
-        }
-
-        #qrCode img {
-            width: 150px;
-            height: 150px;
-            border: 2px solid #00FF00;
-            border-radius: 10px;
-            background-color: #000;
-        }
     </style>
 </head>
 <body>
-    <h1>NeoLink</h1>
+    <h1 id="title">NeoLink
+        <div id="tooltip">
+            <div id="qrCodeContainer"></div>
+        </div>
+    </h1>
     <div id="messages"></div>
     <input type="text" id="messageInput" placeholder="Type a message...">
     <button id="sendButton">Send</button>
     <p>Your ID: <span id="peerId"></span></p>
-    <div id="qrCode">
-        <p>Scan this QR code to connect:</p>
-        <div id="qrCodeContainer"></div>
-    </div>
     <input type="text" id="connectInput" placeholder="Enter peer ID to connect">
     <button id="connectButton">Connect</button>
 
-    <!-- Add sound for receiving messages -->
-    <audio id="receiveSound" src="https://github.com/the-pythor/neolink/blob/main/glitch-sound-fx-pack-04-118236.mp3" preload="auto"></audio>
+    <audio id="receiveSound" src="https://www.soundjay.com/button/beep-08b.wav" preload="auto"></audio>
 
     <script>
         const peer = new Peer(generateReadableId());
@@ -170,6 +179,7 @@
         peer.on('open', (id) => {
             document.getElementById('peerId').textContent = id;
             generateQRCode(id);
+            checkForPeerIdInURL(id);
         });
 
         peer.on('connection', (connection) => {
@@ -224,9 +234,12 @@
         }
 
         function generateQRCode(id) {
-            QRCode.toDataURL(id, { color: { dark: '#00FF00', light: '#000000' } }, function (err, url) {
+            const url = new URL(window.location.href);
+            url.searchParams.set('peer', id);
+            QRCode.toDataURL(url.toString(), { color: { dark: '#00FF00', light: '#000000' } }, function (err, url) {
                 if (err) throw err;
-                document.getElementById('qrCodeContainer').innerHTML = `<img src="${url}" alt="QR Code">`;
+                const qrCodeContainer = document.getElementById('qrCodeContainer');
+                qrCodeContainer.innerHTML = `<img src="${url}" alt="QR Code" onclick="window.open('${url}', '_blank')">`;
             });
         }
 
@@ -238,9 +251,25 @@
             return `${adjective}-${noun}-${Math.floor(Math.random() * 1000)}`;
         }
 
-        // Scan QR Code to Connect
-        // Implementing QR code scanning would typically involve a library or API for the scanning functionality.
-        // For simplicity, this example does not include QR code scanning.
+        function checkForPeerIdInURL(currentId) {
+            const params = new URLSearchParams(window.location.search);
+            const peerId = params.get('peer');
+            if (peerId && peerId !== currentId) {
+                document.getElementById('connectInput').value = peerId;
+                conn = peer.connect(peerId);
+                setupConnection();
+            }
+        }
+
+        // Show tooltip on hover
+        document.getElementById('title').addEventListener('mouseover', () => {
+            document.getElementById('tooltip').style.display = 'block';
+        });
+
+        // Hide tooltip when not hovering
+        document.getElementById('title').addEventListener('mouseout', () => {
+            document.getElementById('tooltip').style.display = 'none';
+        });
     </script>
 </body>
 </html>
